#9510: fix testers reviews (#9715)
** description:
- fix css issue of white space below dropdown lists if user selects one item from them in rules manager page
- fix issue in filtering roles dropdown

--- a/web/client/themes/default/less/autocomplete.less
+++ b/web/client/themes/default/less/autocomplete.less
@@ -38,6 +38,7 @@
 .rw-combobox .rw-btn {
     overflow: hidden;
 }
-.d-flex{
+.autocompleteField.d-flex{
     display: flex;
+    height: 100%;
 }
